changes: add more fields to armors

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -1,14 +1,5 @@
 {
   "anima.ui.advantageSection.title": "Advantages",
-  "anima.ui.armor.at.cold.title": "COL",
-  "anima.ui.armor.at.cut.title": "CUT",
-  "anima.ui.armor.at.electricity.title": "ELE",
-  "anima.ui.armor.at.energy.title": "ENE",
-  "anima.ui.armor.at.heat.title": "HEA",
-  "anima.ui.armor.at.impact.title": "IMP",
-  "anima.ui.armor.at.thrust.title": "THR",
-  "anima.ui.armor.name.title": "Name",
-  "anima.ui.armor.title": "Final armor",
   "anima.ui.aspectSection.age.title": "Age",
   "anima.ui.aspectSection.appearance.title": "Appearance",
   "anima.ui.aspectSection.eyes.title": "Eyes",
@@ -30,48 +21,60 @@
   "anima.ui.combat.ammo.amount.title": "Amount",
   "anima.ui.combat.ammo.name.title": "Name",
   "anima.ui.combat.ammo.title": "Ammo",
-  "anima.ui.combat.armors.cold.title": "Col",
-  "anima.ui.combat.armors.cut.title": "Cut",
-  "anima.ui.combat.armors.electricity.title": "Ele",
-  "anima.ui.combat.armors.energy.title": "Ene",
+  "anima.ui.combat.armors.at.cold.title": "COL",
+  "anima.ui.combat.armors.at.cut.title": "CUT",
+  "anima.ui.combat.armors.at.electricity.title": "ELE",
+  "anima.ui.combat.armors.at.energy.title": "ENE",
+  "anima.ui.combat.armors.at.heat.title": "HEA",
+  "anima.ui.combat.armors.at.impact.title": "IMP",
+  "anima.ui.combat.armors.at.thrust.title": "THR",
+  "anima.ui.combat.armors.equipped.title": "¿Equipped?",
   "anima.ui.combat.armors.header.name.title": "Nombre",
-  "anima.ui.combat.armors.heat.title": "Hea",
-  "anima.ui.combat.armors.impact.title": "Imp",
-  "anima.ui.combat.armors.thrust.title": "Thr",
+  "anima.ui.combat.armors.integrity.title": "Int.",
+  "anima.ui.combat.armors.localization.breastplate.title": "Breastplate",
+  "anima.ui.combat.armors.localization.complete.title": "Complete",
+  "anima.ui.combat.armors.localization.nightdress.title": "Nightdress",
+  "anima.ui.combat.armors.localization.title": "Localization",
+  "anima.ui.combat.armors.movementRestriction.base.title": "Movem. Restrict. Base",
+  "anima.ui.combat.armors.movementRestriction.final.title": "Movem. Restric. Final",
+  "anima.ui.combat.armors.name.title": "Name",
+  "anima.ui.combat.armors.naturalPenalty.title": "Natural pen.",
+  "anima.ui.combat.armors.presence.title": "Presence",
+  "anima.ui.combat.armors.quality.title": "Quality",
   "anima.ui.combat.armors.title": "Armaduras",
+  "anima.ui.combat.armors.type.hard.title": "Hand",
+  "anima.ui.combat.armors.type.natural.title": "Natural",
+  "anima.ui.combat.armors.type.soft.title": "Soft",
+  "anima.ui.combat.armors.type.title": "Type",
+  "anima.ui.combat.armors.wearArmorRequirement.title": "Wear Armor Requ.",
   "anima.ui.combat.baseValues.attack.title": "Attack",
   "anima.ui.combat.baseValues.block.title": "Block",
   "anima.ui.combat.baseValues.dodge.title": "Dodge",
   "anima.ui.combat.baseValues.title": "Base Values",
   "anima.ui.combat.combatSpecialSkill.title": "Special Skills",
   "anima.ui.combat.combatTables.title": "Combat tables",
+  "anima.ui.combat.finalArmor.title": "Final armor",
   "anima.ui.combat.weapons.attack.roll.message": "attacks with ",
   "anima.ui.combat.weapons.attack.title": "Attack",
   "anima.ui.combat.weapons.block.roll.message": "block with ",
   "anima.ui.combat.weapons.block.title": "Block",
   "anima.ui.combat.weapons.breaking.title": "Bre.",
+  "anima.ui.combat.weapons.cadence.title": "Cadence",
   "anima.ui.combat.weapons.critic.primary.title": "Critic 1",
   "anima.ui.combat.weapons.critic.secondary.title": "Critic 2",
   "anima.ui.combat.weapons.damage.title": "Damage",
+  "anima.ui.combat.weapons.fueRequired.title": "STR req.",
   "anima.ui.combat.weapons.header.name.title": "Name",
   "anima.ui.combat.weapons.initiative.title": "Initiative",
-  "anima.ui.combat.weapons.presence.title": "Presence",
-  "anima.ui.combat.weapons.size.title": "Size",
-  "anima.ui.combat.weapons.quality.title": "Quality",
-  "anima.ui.combat.weapons.oneOrTwoHanded.title": "1 o 2 handed",
-  "anima.ui.weapons.one-handed.title": "one handed",
-  "anima.ui.weapons.two-handed.title": "two handed",
-  "anima.ui.combat.weapons.knowledgeType.title": "Type",
-  "anima.ui.weapons.known.title": "Known",
-  "anima.ui.weapons.similar.title": "Similar",
-  "anima.ui.weapons.mixed.title": "Mixed",
-  "anima.ui.weapons.different.title": "Different / Unarmed",
   "anima.ui.combat.weapons.initiativeBase.title": "Initiative base",
-  "anima.ui.combat.weapons.fueRequired.title": "STR req.",
-  "anima.ui.combat.weapons.isRanged.title": "¿Is ranged?",
-  "anima.ui.combat.weapons.cadence.title": "Cadence",
-  "anima.ui.combat.weapons.range.title": "Range (m)",
   "anima.ui.combat.weapons.integrity.title": "Int.",
+  "anima.ui.combat.weapons.isRanged.title": "¿Is ranged?",
+  "anima.ui.combat.weapons.knowledgeType.title": "Type",
+  "anima.ui.combat.weapons.oneOrTwoHanded.title": "1 o 2 handed",
+  "anima.ui.combat.weapons.presence.title": "Presence",
+  "anima.ui.combat.weapons.quality.title": "Quality",
+  "anima.ui.combat.weapons.range.title": "Range (m)",
+  "anima.ui.combat.weapons.size.title": "Size",
   "anima.ui.combat.weapons.special.title": "Special",
   "anima.ui.combat.weapons.title": "Weapons",
   "anima.ui.contactSection.contactRow.description": "Description",
@@ -135,8 +138,8 @@
   "anima.ui.general.modifiers.allActions.title": "Actions",
   "anima.ui.general.modifiers.physicalActions.title": "Physical",
   "anima.ui.general.modifiers.title": "- Modifiers -",
-  "anima.ui.general.movement.title": "Movement (m)",
   "anima.ui.general.movement.quarter.title": "1/4 (m)",
+  "anima.ui.general.movement.title": "Movement (m)",
   "anima.ui.languageSection.base": "Base",
   "anima.ui.languageSection.title": "Languages",
   "anima.ui.levelSection.title": "Level",
@@ -272,6 +275,7 @@
   "anima.ui.secondaries.social.title": "Social Abilities",
   "anima.ui.secondaries.special.title": "Special",
   "anima.ui.secondaries.stealth.title": "Stealth",
+  "anima.ui.secondaries.streetwise.title": "Street wise",
   "anima.ui.secondaries.style.title": "Style",
   "anima.ui.secondaries.subterfuge.title": "Subterfuge Abilities",
   "anima.ui.secondaries.swim.title": "Swim",
@@ -291,12 +295,19 @@
   "anima.ui.tabs.psychic": "Psychic",
   "anima.ui.tabs.secondaries": "Secondaries",
   "anima.ui.titleSection.title": "Titles",
+  "anima.ui.weapons.different.title": "Different / Unarmed",
+  "anima.ui.weapons.known.title": "Known",
+  "anima.ui.weapons.mixed.title": "Mixed",
+  "anima.ui.weapons.one-handed.title": "one handed",
+  "anima.ui.weapons.similar.title": "Similar",
+  "anima.ui.weapons.two-handed.title": "two handed",
   "contextualMenu.common.options.delete": "Delete",
   "contextualMenu.elan.options.addPower": "Add power",
   "contextualMenu.elan.options.deletePower": "Delete power",
   "dialogs.continue": "Continue",
   "dialogs.items.advantage.content": "Advantage name",
   "dialogs.items.ammo.content": "Ammo name",
+  "dialogs.items.armors.content": "Armor name",
   "dialogs.items.arsMagnus.content": "Ars Magnus name",
   "dialogs.items.combatSpecialSkills.content": "Name",
   "dialogs.items.combatTable.content": "Combat table name",
@@ -324,7 +335,6 @@
   "dialogs.items.summon.content": "Summon name",
   "dialogs.items.technique.content": "Technique name",
   "dialogs.items.title.content": "Title name",
-  "dialogs.items.armors.content": "Armor name",
   "dialogs.items.weapons.content": "Weapon name",
   "dialogs.mod.content": "Modifier",
   "dialogs.title": "Dialog"
