--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -1,14 +1,5 @@
 {
   "anima.ui.advantageSection.title": "Ventajas",
-  "anima.ui.armor.at.cold.title": "FRI",
-  "anima.ui.armor.at.cut.title": "FIL",
-  "anima.ui.armor.at.electricity.title": "ELE",
-  "anima.ui.armor.at.energy.title": "ENE",
-  "anima.ui.armor.at.heat.title": "CAL",
-  "anima.ui.armor.at.impact.title": "CON",
-  "anima.ui.armor.at.thrust.title": "PEN",
-  "anima.ui.armor.name.title": "Nombre",
-  "anima.ui.armor.title": "Armadura final",
   "anima.ui.aspectSection.age.title": "Edad",
   "anima.ui.aspectSection.appearance.title": "Apariencia",
   "anima.ui.aspectSection.eyes.title": "Ojos",
@@ -30,48 +21,60 @@
   "anima.ui.combat.ammo.amount.title": "Cantidad",
   "anima.ui.combat.ammo.name.title": "Nombre",
   "anima.ui.combat.ammo.title": "Munición",
-  "anima.ui.combat.armors.cold.title": "Frio",
-  "anima.ui.combat.armors.cut.title": "Fil",
-  "anima.ui.combat.armors.electricity.title": "Ele",
-  "anima.ui.combat.armors.energy.title": "Ene",
+  "anima.ui.combat.armors.at.cold.title": "FRI",
+  "anima.ui.combat.armors.at.cut.title": "FIL",
+  "anima.ui.combat.armors.at.electricity.title": "ELE",
+  "anima.ui.combat.armors.at.energy.title": "ENE",
+  "anima.ui.combat.armors.at.heat.title": "CAL",
+  "anima.ui.combat.armors.at.impact.title": "CON",
+  "anima.ui.combat.armors.at.thrust.title": "PEN",
+  "anima.ui.combat.armors.equipped.title": "¿Equipada?",
   "anima.ui.combat.armors.header.name.title": "Nombre",
-  "anima.ui.combat.armors.heat.title": "Cal",
-  "anima.ui.combat.armors.impact.title": "Con",
-  "anima.ui.combat.armors.thrust.title": "Pen",
+  "anima.ui.combat.armors.integrity.title": "Ent.",
+  "anima.ui.combat.armors.localization.breastplate.title": "Peto",
+  "anima.ui.combat.armors.localization.complete.title": "Completa",
+  "anima.ui.combat.armors.localization.nightdress.title": "Camisola",
+  "anima.ui.combat.armors.localization.title": "Localización",
+  "anima.ui.combat.armors.movementRestriction.base.title": "Restr. Movim. Base",
+  "anima.ui.combat.armors.movementRestriction.final.title": "Restr. Movim. Final",
+  "anima.ui.combat.armors.name.title": "Nombre",
+  "anima.ui.combat.armors.naturalPenalty.title": "Pen. natural",
+  "anima.ui.combat.armors.presence.title": "Presencia",
+  "anima.ui.combat.armors.quality.title": "Calidad",
   "anima.ui.combat.armors.title": "Armaduras",
+  "anima.ui.combat.armors.type.hard.title": "Dura",
+  "anima.ui.combat.armors.type.natural.title": "Natural",
+  "anima.ui.combat.armors.type.soft.title": "Blanda",
+  "anima.ui.combat.armors.type.title": "Tipo",
+  "anima.ui.combat.armors.wearArmorRequirement.title": "Req. Llevar Armadura",
   "anima.ui.combat.baseValues.attack.title": "Ataque",
   "anima.ui.combat.baseValues.block.title": "Parada",
   "anima.ui.combat.baseValues.dodge.title": "Esquiva",
   "anima.ui.combat.baseValues.title": "Valores base",
   "anima.ui.combat.combatSpecialSkill.title": "Habilidades especiales",
   "anima.ui.combat.combatTables.title": "Tablas de combate",
+  "anima.ui.combat.finalArmor.title": "Armadura final",
   "anima.ui.combat.weapons.attack.roll.message": "ataque con ",
   "anima.ui.combat.weapons.attack.title": "Ataque",
   "anima.ui.combat.weapons.block.roll.message": "parada con ",
   "anima.ui.combat.weapons.block.title": "Parada",
   "anima.ui.combat.weapons.breaking.title": "Rot.",
+  "anima.ui.combat.weapons.cadence.title": "Cadencia",
   "anima.ui.combat.weapons.critic.primary.title": "Crítico 1",
   "anima.ui.combat.weapons.critic.secondary.title": "Crítico 2",
   "anima.ui.combat.weapons.damage.title": "Daño",
+  "anima.ui.combat.weapons.fueRequired.title": "FUE req.",
   "anima.ui.combat.weapons.header.name.title": "Nombre",
   "anima.ui.combat.weapons.initiative.title": "Turno",
-  "anima.ui.combat.weapons.presence.title": "Presencia",
-  "anima.ui.combat.weapons.size.title": "Tamaño",
-  "anima.ui.combat.weapons.quality.title": "Calidad",
-  "anima.ui.combat.weapons.oneOrTwoHanded.title": "1 o 2 manos",
-  "anima.ui.weapons.one-handed.title": "A una mano",
-  "anima.ui.weapons.two-handed.title": "A dos manos",
-  "anima.ui.combat.weapons.knowledgeType.title": "Tipo",
-  "anima.ui.weapons.known.title": "Conocida",
-  "anima.ui.weapons.similar.title": "Similar",
-  "anima.ui.weapons.mixed.title": "Mixta",
-  "anima.ui.weapons.different.title": "Diferente / Desarmado",
   "anima.ui.combat.weapons.initiativeBase.title": "Turno base",
-  "anima.ui.combat.weapons.fueRequired.title": "FUE req.",
-  "anima.ui.combat.weapons.isRanged.title": "¿A distancia?",
-  "anima.ui.combat.weapons.cadence.title": "Cadencia",
-  "anima.ui.combat.weapons.range.title": "Rango (m)",
   "anima.ui.combat.weapons.integrity.title": "Ent.",
+  "anima.ui.combat.weapons.isRanged.title": "¿A distancia?",
+  "anima.ui.combat.weapons.knowledgeType.title": "Tipo",
+  "anima.ui.combat.weapons.oneOrTwoHanded.title": "1 o 2 manos",
+  "anima.ui.combat.weapons.presence.title": "Presencia",
+  "anima.ui.combat.weapons.quality.title": "Calidad",
+  "anima.ui.combat.weapons.range.title": "Rango (m)",
+  "anima.ui.combat.weapons.size.title": "Tamaño",
   "anima.ui.combat.weapons.special.title": "Especial",
   "anima.ui.combat.weapons.title": "Armas",
   "anima.ui.contactSection.contactRow.description": "Descripción",
@@ -135,8 +138,8 @@
   "anima.ui.general.modifiers.allActions.title": "Acciones",
   "anima.ui.general.modifiers.physicalActions.title": "Físicos",
   "anima.ui.general.modifiers.title": "- Modificadores -",
-  "anima.ui.general.movement.title": "Movimiento (m)",
   "anima.ui.general.movement.quarter.title": "1/4 (m)",
+  "anima.ui.general.movement.title": "Movimiento (m)",
   "anima.ui.languageSection.base": "Base",
   "anima.ui.languageSection.title": "Idiomas",
   "anima.ui.levelSection.title": "Nivel",
@@ -291,12 +294,19 @@
   "anima.ui.tabs.psychic": "Psíquico",
   "anima.ui.tabs.secondaries": "Secundarias",
   "anima.ui.titleSection.title": "Títulos",
+  "anima.ui.weapons.different.title": "Diferente / Desarmado",
+  "anima.ui.weapons.known.title": "Conocida",
+  "anima.ui.weapons.mixed.title": "Mixta",
+  "anima.ui.weapons.one-handed.title": "A una mano",
+  "anima.ui.weapons.similar.title": "Similar",
+  "anima.ui.weapons.two-handed.title": "A dos manos",
   "contextualMenu.common.options.delete": "Eliminar",
   "contextualMenu.elan.options.addPower": "Añadir poder",
   "contextualMenu.elan.options.deletePower": "Eliminar poder",
   "dialogs.continue": "Continuar",
   "dialogs.items.advantage.content": "Nombre de la ventaja",
   "dialogs.items.ammo.content": "Nombre de la munición",
+  "dialogs.items.armors.content": "Nombre de la armadura",
   "dialogs.items.arsMagnus.content": "Nombre del Ars Magnus",
   "dialogs.items.combatSpecialSkills.content": "Nombre",
   "dialogs.items.combatTable.content": "Nombre de la tabla de combate",
@@ -323,7 +333,6 @@
   "dialogs.items.summon.content": "Nombre de la invocación",
   "dialogs.items.technique.content": "Nombre de la técnica",
   "dialogs.items.title.content": "Nombre del título",
-  "dialogs.items.armors.content": "Nombre de la armadura",
   "dialogs.items.weapons.content": "Nombre del arma",
   "dialogs.mod.content": "Modificador",
   "dialogs.title": "Diálogo"
