changes: add tabs to mystic tab

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -279,6 +279,8 @@
   "anima.ui.secondaries.style.title": "Style",
   "anima.ui.secondaries.subterfuge.title": "Subterfuge Abilities",
   "anima.ui.secondaries.swim.title": "Swim",
+  "anima.ui.mystic.tabs.main": "Main",
+  "anima.ui.mystic.tabs.secondaries": "Grimoire",
   "anima.ui.secondaries.tactics.title": "Tactics",
   "anima.ui.secondaries.tailoring.title": "Tailoring",
   "anima.ui.secondaries.theft.title": "Theft",
