--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -275,6 +275,8 @@
   "anima.ui.secondaries.special.title": "Especial",
   "anima.ui.secondaries.stealth.title": "Sigilo",
   "anima.ui.secondaries.streetwise.title": "Callejeo",
+  "anima.ui.mystic.tabs.main": "Principal",
+  "anima.ui.mystic.tabs.secondaries": "Grimorio",
   "anima.ui.secondaries.style.title": "Estilo",
   "anima.ui.secondaries.subterfuge.title": "Habilidades de subterfugio",
   "anima.ui.secondaries.swim.title": "Nadar",
