changes: add spells to mystic

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -146,10 +146,49 @@
   "anima.ui.mystic.act.alternative.title": "Alternative",
   "anima.ui.mystic.act.main.title": "Main",
   "anima.ui.mystic.act.title": "ACT",
-  "anima.ui.mystic.freeAccessSpell.cost.title": "Cost",
-  "anima.ui.mystic.freeAccessSpell.level.title": "Level",
-  "anima.ui.mystic.freeAccessSpell.spell.title": "Spell",
-  "anima.ui.mystic.freeAccessSpell.title": "Free access",
+  "anima.ui.mystic.spells.title": "Spells",
+  "anima.ui.mystic.spell.cost.title": "Cost",
+  "anima.ui.mystic.spell.via.title": "Via / Subvia",
+  "anima.ui.mystic.spell.spellType.title": "Type",
+  "anima.ui.mystic.spell.actionType.title": "Action",
+  "anima.ui.mystic.spell.via.air.title": "Air",
+  "anima.ui.mystic.spell.via.blood.title": "Blood",
+  "anima.ui.mystic.spell.via.chaos.title": "Chaos",
+  "anima.ui.mystic.spell.via.creation.title": "Creation",
+  "anima.ui.mystic.spell.via.darkness.title": "Darkness",
+  "anima.ui.mystic.spell.via.death.title": "Death",
+  "anima.ui.mystic.spell.via.destruction.title": "Destruction",
+  "anima.ui.mystic.spell.via.dreams.title": "Dreams",
+  "anima.ui.mystic.spell.via.earth.title": "Earth",
+  "anima.ui.mystic.spell.via.emptiness.title": "Emptiness",
+  "anima.ui.mystic.spell.via.essence.title": "Essence",
+  "anima.ui.mystic.spell.via.fire.title": "Fire",
+  "anima.ui.mystic.spell.via.illusion.title": "Illusion",
+  "anima.ui.mystic.spell.via.knowledge.title": "Knowledge",
+  "anima.ui.mystic.spell.via.light.title": "Light",
+  "anima.ui.mystic.spell.via.literae.title": "Literae",
+  "anima.ui.mystic.spell.via.musical.title": "Musical",
+  "anima.ui.mystic.spell.via.necromancy.title": "Necromancy",
+  "anima.ui.mystic.spell.via.nobility.title": "Nobility",
+  "anima.ui.mystic.spell.via.peace.title": "Peace",
+  "anima.ui.mystic.spell.via.sin.title": "Sin",
+  "anima.ui.mystic.spell.via.threshold.title": "Threshold",
+  "anima.ui.mystic.spell.via.time.title": "Time",
+  "anima.ui.mystic.spell.via.war.title": "War",
+  "anima.ui.mystic.spell.via.water.title": "Water",
+  "anima.ui.mystic.spell.actionType.active.title": "Active",
+  "anima.ui.mystic.spell.actionType.passive.title": "Passive",
+  "anima.ui.mystic.spell.spellType.attack.title": "Attack",
+  "anima.ui.mystic.spell.spellType.defense.title": "Defense",
+  "anima.ui.mystic.spell.spellType.animatic.title": "Animatic",
+  "anima.ui.mystic.spell.spellType.effect.title": "Effect",
+  "anima.ui.mystic.spell.spellType.automatic.title": "Automatic",
+  "anima.ui.mystic.spell.spellType.detection.title": "Detection",
+  "anima.ui.mystic.spell.grade.intRequired.title": "Int. R.",
+  "anima.ui.mystic.spell.grade.zeon.title": "Zeon",
+  "anima.ui.mystic.spell.grade.maintenanceCost.title": "Maint.",
+  "anima.ui.mystic.spell.grade.description.title": "Description",
+  "anima.ui.mystic.spell.level.title": "Level",
   "anima.ui.mystic.innateMagic.alternative.title": "Alternative",
   "anima.ui.mystic.innateMagic.main.title": "Main",
   "anima.ui.mystic.innateMagic.title": "Innate Magic",
@@ -280,7 +319,11 @@
   "anima.ui.secondaries.subterfuge.title": "Subterfuge Abilities",
   "anima.ui.secondaries.swim.title": "Swim",
   "anima.ui.mystic.tabs.main": "Main",
-  "anima.ui.mystic.tabs.secondaries": "Grimoire",
+  "anima.ui.mystic.tabs.secondaries": "Spells",
+  "anima.ui.mystic.spell.grade.base.title": "Base",
+  "anima.ui.mystic.spell.grade.intermediate.title": "Intermediate",
+  "anima.ui.mystic.spell.grade.advanced.title": "Advanced",
+  "anima.ui.mystic.spell.grade.arcane.title": "Arcane",
   "anima.ui.secondaries.tactics.title": "Tactics",
   "anima.ui.secondaries.tailoring.title": "Tailoring",
   "anima.ui.secondaries.theft.title": "Theft",
@@ -318,7 +361,7 @@
   "dialogs.items.disadvantage.content": "Disadvantage name",
   "dialogs.items.elan.content": "Elan name",
   "dialogs.items.elanPower.content": "Power name",
-  "dialogs.items.freeAccessSpell.content": "Free access spell name",
+  "dialogs.items.spell.content": "Free access spell name",
   "dialogs.items.innatePsychicPower.content": "Innate psychic power name",
   "dialogs.items.kiSkill.content": "Ki skill name",
   "dialogs.items.language.content": "Language name",
