--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -146,10 +146,53 @@
   "anima.ui.mystic.act.alternative.title": "Alternativo",
   "anima.ui.mystic.act.main.title": "Principal",
   "anima.ui.mystic.act.title": "ACT",
-  "anima.ui.mystic.freeAccessSpell.cost.title": "Coste",
-  "anima.ui.mystic.freeAccessSpell.level.title": "Nivel",
-  "anima.ui.mystic.freeAccessSpell.spell.title": "Conjuro",
-  "anima.ui.mystic.freeAccessSpell.title": "Libre Acceso / Subvía",
+  "anima.ui.mystic.spell.cost.title": "Coste",
+  "anima.ui.mystic.spells.title": "Conjuros",
+  "anima.ui.mystic.spell.via.title": "Vía / Subvía",
+  "anima.ui.mystic.spell.spellType.title": "Tipo",
+  "anima.ui.mystic.spell.actionType.title": "Acción",
+  "anima.ui.mystic.spell.via.air.title": "Aire",
+  "anima.ui.mystic.spell.via.blood.title": "Sangre",
+  "anima.ui.mystic.spell.via.chaos.title": "Caos",
+  "anima.ui.mystic.spell.via.creation.title": "Creación",
+  "anima.ui.mystic.spell.via.darkness.title": "Oscuridad",
+  "anima.ui.mystic.spell.via.death.title": "Muerte",
+  "anima.ui.mystic.spell.via.destruction.title": "Destrucción",
+  "anima.ui.mystic.spell.via.dreams.title": "Sueños",
+  "anima.ui.mystic.spell.via.earth.title": "Tierra",
+  "anima.ui.mystic.spell.via.emptiness.title": "Vacío",
+  "anima.ui.mystic.spell.via.essence.title": "Esencia",
+  "anima.ui.mystic.spell.via.fire.title": "Fuego",
+  "anima.ui.mystic.spell.via.illusion.title": "Ilusión",
+  "anima.ui.mystic.spell.via.knowledge.title": "Conocimiento",
+  "anima.ui.mystic.spell.via.light.title": "Luz",
+  "anima.ui.mystic.spell.via.literae.title": "Literae",
+  "anima.ui.mystic.spell.via.musical.title": "Musical",
+  "anima.ui.mystic.spell.via.necromancy.title": "Nigromancia",
+  "anima.ui.mystic.spell.via.nobility.title": "Nobleza",
+  "anima.ui.mystic.spell.via.peace.title": "Paz",
+  "anima.ui.mystic.spell.via.sin.title": "Pecado",
+  "anima.ui.mystic.spell.via.threshold.title": "Umbral",
+  "anima.ui.mystic.spell.via.time.title": "Tiempo",
+  "anima.ui.mystic.spell.via.war.title": "Guerra",
+  "anima.ui.mystic.spell.via.water.title": "Agua",
+  "anima.ui.mystic.spell.actionType.active.title": "Activo",
+  "anima.ui.mystic.spell.actionType.passive.title": "Pasivo",
+  "anima.ui.mystic.spell.spellType.attack.title": "Ataque",
+  "anima.ui.mystic.spell.spellType.defense.title": "Defensa",
+  "anima.ui.mystic.spell.spellType.animatic.title": "Anímica",
+  "anima.ui.mystic.spell.spellType.effect.title": "Efecto",
+  "anima.ui.mystic.spell.spellType.automatic.title": "Automático",
+  "anima.ui.mystic.spell.spellType.detection.title": "Detección",
+  "anima.ui.mystic.spell.grade.intRequired.title": "Int. R.",
+  "anima.ui.mystic.spell.grade.zeon.title": "Zeón",
+  "anima.ui.mystic.spell.grade.maintenanceCost.title": "Mant.",
+  "anima.ui.mystic.spell.grade.description.title": "Descripción",
+  "anima.ui.mystic.spell.grade.base.title": "Base",
+  "anima.ui.mystic.spell.grade.intermediate.title": "Intermedio",
+  "anima.ui.mystic.spell.grade.advanced.title": "Avanzado",
+  "anima.ui.mystic.spell.grade.arcane.title": "Arcano",
+  "anima.ui.mystic.spell.level.title": "Nivel",
   "anima.ui.mystic.innateMagic.alternative.title": "Alternativo",
   "anima.ui.mystic.innateMagic.main.title": "Principal",
   "anima.ui.mystic.innateMagic.title": "Magia Innata",
@@ -276,7 +319,7 @@
   "anima.ui.secondaries.stealth.title": "Sigilo",
   "anima.ui.secondaries.streetwise.title": "Callejeo",
   "anima.ui.mystic.tabs.main": "Principal",
-  "anima.ui.mystic.tabs.secondaries": "Grimorio",
+  "anima.ui.mystic.tabs.secondaries": "Conjuros",
   "anima.ui.secondaries.style.title": "Estilo",
   "anima.ui.secondaries.subterfuge.title": "Habilidades de subterfugio",
   "anima.ui.secondaries.swim.title": "Nadar",
@@ -317,7 +360,7 @@
   "dialogs.items.disadvantage.content": "Nombre de la desventaja",
   "dialogs.items.elan.content": "Nombre del Elan",
   "dialogs.items.elan_power.content": "Nombre del poder",
-  "dialogs.items.freeAccessSpell.content": "Nombre del hechizo de acceso libre",
+  "dialogs.items.spell.content": "Nombre del hechizo de acceso libre",
   "dialogs.items.innatePsychicPower.content": "Nombre del poder psíquico innato",
   "dialogs.items.kiSkill.content": "Nombre de la habilidad de Ki",
   "dialogs.items.language.content": "Nombre del lenguaje",
