hotfix: add has daily maintenance field to spells

--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -146,53 +146,6 @@
   "anima.ui.mystic.act.alternative.title": "Alternativo",
   "anima.ui.mystic.act.main.title": "Principal",
   "anima.ui.mystic.act.title": "ACT",
-  "anima.ui.mystic.spell.cost.title": "Coste",
-  "anima.ui.mystic.spells.title": "Conjuros",
-  "anima.ui.mystic.spell.via.title": "Vía / Subvía",
-  "anima.ui.mystic.spell.spellType.title": "Tipo",
-  "anima.ui.mystic.spell.actionType.title": "Acción",
-  "anima.ui.mystic.spell.via.air.title": "Aire",
-  "anima.ui.mystic.spell.via.blood.title": "Sangre",
-  "anima.ui.mystic.spell.via.chaos.title": "Caos",
-  "anima.ui.mystic.spell.via.creation.title": "Creación",
-  "anima.ui.mystic.spell.via.darkness.title": "Oscuridad",
-  "anima.ui.mystic.spell.via.death.title": "Muerte",
-  "anima.ui.mystic.spell.via.destruction.title": "Destrucción",
-  "anima.ui.mystic.spell.via.dreams.title": "Sueños",
-  "anima.ui.mystic.spell.via.earth.title": "Tierra",
-  "anima.ui.mystic.spell.via.emptiness.title": "Vacío",
-  "anima.ui.mystic.spell.via.essence.title": "Esencia",
-  "anima.ui.mystic.spell.via.fire.title": "Fuego",
-  "anima.ui.mystic.spell.via.illusion.title": "Ilusión",
-  "anima.ui.mystic.spell.via.knowledge.title": "Conocimiento",
-  "anima.ui.mystic.spell.via.light.title": "Luz",
-  "anima.ui.mystic.spell.via.literae.title": "Literae",
-  "anima.ui.mystic.spell.via.musical.title": "Musical",
-  "anima.ui.mystic.spell.via.necromancy.title": "Nigromancia",
-  "anima.ui.mystic.spell.via.nobility.title": "Nobleza",
-  "anima.ui.mystic.spell.via.peace.title": "Paz",
-  "anima.ui.mystic.spell.via.sin.title": "Pecado",
-  "anima.ui.mystic.spell.via.threshold.title": "Umbral",
-  "anima.ui.mystic.spell.via.time.title": "Tiempo",
-  "anima.ui.mystic.spell.via.war.title": "Guerra",
-  "anima.ui.mystic.spell.via.water.title": "Agua",
-  "anima.ui.mystic.spell.actionType.active.title": "Activo",
-  "anima.ui.mystic.spell.actionType.passive.title": "Pasivo",
-  "anima.ui.mystic.spell.spellType.attack.title": "Ataque",
-  "anima.ui.mystic.spell.spellType.defense.title": "Defensa",
-  "anima.ui.mystic.spell.spellType.animatic.title": "Anímica",
-  "anima.ui.mystic.spell.spellType.effect.title": "Efecto",
-  "anima.ui.mystic.spell.spellType.automatic.title": "Automático",
-  "anima.ui.mystic.spell.spellType.detection.title": "Detección",
-  "anima.ui.mystic.spell.grade.intRequired.title": "Int. R.",
-  "anima.ui.mystic.spell.grade.zeon.title": "Zeón",
-  "anima.ui.mystic.spell.grade.maintenanceCost.title": "Mant.",
-  "anima.ui.mystic.spell.grade.description.title": "Descripción",
-  "anima.ui.mystic.spell.grade.base.title": "Base",
-  "anima.ui.mystic.spell.grade.intermediate.title": "Intermedio",
-  "anima.ui.mystic.spell.grade.advanced.title": "Avanzado",
-  "anima.ui.mystic.spell.grade.arcane.title": "Arcano",
-  "anima.ui.mystic.spell.level.title": "Nivel",
   "anima.ui.mystic.innateMagic.alternative.title": "Alternativo",
   "anima.ui.mystic.innateMagic.main.title": "Principal",
   "anima.ui.mystic.innateMagic.title": "Magia Innata",
@@ -224,15 +177,65 @@
   "anima.ui.mystic.selectedSpells.cost.title": "Coste",
   "anima.ui.mystic.selectedSpells.name.title": "Conjuro",
   "anima.ui.mystic.selectedSpells.title": "Conjuros seleccionados",
+  "anima.ui.mystic.spell.actionType.active.title": "Activo",
+  "anima.ui.mystic.spell.actionType.passive.title": "Pasivo",
+  "anima.ui.mystic.spell.actionType.title": "Acción",
+  "anima.ui.mystic.spell.cost.title": "Coste",
+  "anima.ui.mystic.spell.grade.advanced.title": "Avanzado",
+  "anima.ui.mystic.spell.grade.arcane.title": "Arcano",
+  "anima.ui.mystic.spell.grade.base.title": "Base",
+  "anima.ui.mystic.spell.grade.description.title": "Descripción",
+  "anima.ui.mystic.spell.grade.intRequired.title": "Int. R.",
+  "anima.ui.mystic.spell.grade.intermediate.title": "Intermedio",
+  "anima.ui.mystic.spell.grade.maintenanceCost.title": "Mant.",
+  "anima.ui.mystic.spell.grade.zeon.title": "Zeón",
+  "anima.ui.mystic.spell.hasDailyMaintenance.title": "¿Mant. Diario?",
+  "anima.ui.mystic.spell.level.title": "Nivel",
+  "anima.ui.mystic.spell.spellType.animatic.title": "Anímica",
+  "anima.ui.mystic.spell.spellType.attack.title": "Ataque",
+  "anima.ui.mystic.spell.spellType.automatic.title": "Automático",
+  "anima.ui.mystic.spell.spellType.defense.title": "Defensa",
+  "anima.ui.mystic.spell.spellType.detection.title": "Detección",
+  "anima.ui.mystic.spell.spellType.effect.title": "Efecto",
+  "anima.ui.mystic.spell.spellType.title": "Tipo",
+  "anima.ui.mystic.spell.via.air.title": "Aire",
+  "anima.ui.mystic.spell.via.blood.title": "Sangre",
+  "anima.ui.mystic.spell.via.chaos.title": "Caos",
+  "anima.ui.mystic.spell.via.creation.title": "Creación",
+  "anima.ui.mystic.spell.via.darkness.title": "Oscuridad",
+  "anima.ui.mystic.spell.via.death.title": "Muerte",
+  "anima.ui.mystic.spell.via.destruction.title": "Destrucción",
+  "anima.ui.mystic.spell.via.dreams.title": "Sueños",
+  "anima.ui.mystic.spell.via.earth.title": "Tierra",
+  "anima.ui.mystic.spell.via.emptiness.title": "Vacío",
+  "anima.ui.mystic.spell.via.essence.title": "Esencia",
+  "anima.ui.mystic.spell.via.fire.title": "Fuego",
+  "anima.ui.mystic.spell.via.illusion.title": "Ilusión",
+  "anima.ui.mystic.spell.via.knowledge.title": "Conocimiento",
+  "anima.ui.mystic.spell.via.light.title": "Luz",
+  "anima.ui.mystic.spell.via.literae.title": "Literae",
+  "anima.ui.mystic.spell.via.musical.title": "Musical",
+  "anima.ui.mystic.spell.via.necromancy.title": "Nigromancia",
+  "anima.ui.mystic.spell.via.nobility.title": "Nobleza",
+  "anima.ui.mystic.spell.via.peace.title": "Paz",
+  "anima.ui.mystic.spell.via.sin.title": "Pecado",
+  "anima.ui.mystic.spell.via.threshold.title": "Umbral",
+  "anima.ui.mystic.spell.via.time.title": "Tiempo",
+  "anima.ui.mystic.spell.via.title": "Vía / Subvía",
+  "anima.ui.mystic.spell.via.war.title": "Guerra",
+  "anima.ui.mystic.spell.via.water.title": "Agua",
   "anima.ui.mystic.spellMaintenance.cost.title": "Coste",
   "anima.ui.mystic.spellMaintenance.name.title": "Conjuro / Criatura",
   "anima.ui.mystic.spellMaintenance.title": "Mantenimientos diarios",
+  "anima.ui.mystic.spells.title": "Conjuros",
   "anima.ui.mystic.summon.title": "Invocaciones",
   "anima.ui.mystic.summoning.banish.title": "Desconvocar",
   "anima.ui.mystic.summoning.bind.title": "Atar",
   "anima.ui.mystic.summoning.control.title": "Dominar",
   "anima.ui.mystic.summoning.summon.title": "Convocar",
   "anima.ui.mystic.summoning.title": "Convocación",
+  "anima.ui.mystic.tabs.main": "Principal",
+  "anima.ui.mystic.tabs.secondaries": "Conjuros",
   "anima.ui.mystic.zeon.accumulated.title": "Acumulado",
   "anima.ui.mystic.zeon.final.title": "Final",
   "anima.ui.mystic.zeon.title": "Zeon",
@@ -318,8 +321,6 @@
   "anima.ui.secondaries.special.title": "Especial",
   "anima.ui.secondaries.stealth.title": "Sigilo",
   "anima.ui.secondaries.streetwise.title": "Callejeo",
-  "anima.ui.mystic.tabs.main": "Principal",
-  "anima.ui.mystic.tabs.secondaries": "Conjuros",
   "anima.ui.secondaries.style.title": "Estilo",
   "anima.ui.secondaries.subterfuge.title": "Habilidades de subterfugio",
   "anima.ui.secondaries.swim.title": "Nadar",
@@ -360,7 +361,6 @@
   "dialogs.items.disadvantage.content": "Nombre de la desventaja",
   "dialogs.items.elan.content": "Nombre del Elan",
   "dialogs.items.elan_power.content": "Nombre del poder",
-  "dialogs.items.spell.content": "Nombre del hechizo de acceso libre",
   "dialogs.items.innatePsychicPower.content": "Nombre del poder psíquico innato",
   "dialogs.items.kiSkill.content": "Nombre de la habilidad de Ki",
   "dialogs.items.language.content": "Nombre del lenguaje",
@@ -374,6 +374,7 @@
   "dialogs.items.secondarySkill.content": "Nombre de la habilidad",
   "dialogs.items.selectedSpell.content": "Nombre del conjuro seleccionado",
   "dialogs.items.specialSkill.content": "Nombre de la habilidad especial o tabla",
+  "dialogs.items.spell.content": "Nombre del hechizo de acceso libre",
   "dialogs.items.spellMaintenance.content": "Nombre del conjuro mantenido",
   "dialogs.items.summon.content": "Nombre de la invocación",
   "dialogs.items.technique.content": "Nombre de la técnica",
