changes: add head localization to armors

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -31,6 +31,7 @@
   "anima.ui.combat.armors.equipped.title": "¿Equipped?",
   "anima.ui.combat.armors.header.name.title": "Nombre",
   "anima.ui.combat.armors.integrity.title": "Int.",
+  "anima.ui.combat.armors.localization.head.title": "Head",
   "anima.ui.combat.armors.localization.breastplate.title": "Breastplate",
   "anima.ui.combat.armors.localization.complete.title": "Complete",
   "anima.ui.combat.armors.localization.nightdress.title": "Nightdress",
