--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -31,6 +31,7 @@
   "anima.ui.combat.armors.equipped.title": "¿Equipada?",
   "anima.ui.combat.armors.header.name.title": "Nombre",
   "anima.ui.combat.armors.integrity.title": "Ent.",
+  "anima.ui.combat.armors.localization.head.title": "Cabeza",
   "anima.ui.combat.armors.localization.breastplate.title": "Peto",
   "anima.ui.combat.armors.localization.complete.title": "Completa",
   "anima.ui.combat.armors.localization.nightdress.title": "Camisola",
