changes: add more fields to weapons

--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -30,8 +30,15 @@
   "anima.ui.combat.armors.at.thrust.title": "PEN",
   "anima.ui.combat.armors.equipped.title": "¿Equipada?",
   "anima.ui.combat.armors.header.name.title": "Nombre",
-  "anima.ui.combat.armors.integrity.title": "Ent.",
+  "anima.ui.combat.armors.integrity.title": "Entereza",
   "anima.ui.combat.armors.localization.head.title": "Cabeza",
+  "anima.ui.combat.weapon.manageabilityType.title": "Manejabilidad",
+  "anima.ui.combat.weapon.manageabilityType.oneHand.title": "1 mano",
+  "anima.ui.combat.weapon.manageabilityType.twoHand.title": "2 manos",
+  "anima.ui.combat.weapon.manageabilityType.oneOrTwoHand.title": "1 ó 2 manos",
+  "anima.ui.combat.weapon.shotType.title": "Tipo de disparo",
+  "anima.ui.combat.weapon.shotType.shot.title": "Disparada",
+  "anima.ui.combat.weapon.shotType.throw.title": "Lanzada",
   "anima.ui.combat.armors.localization.breastplate.title": "Peto",
   "anima.ui.combat.armors.localization.complete.title": "Completa",
   "anima.ui.combat.armors.localization.nightdress.title": "Camisola",
@@ -59,22 +66,24 @@
   "anima.ui.combat.weapons.attack.title": "Ataque",
   "anima.ui.combat.weapons.block.roll.message": "parada con ",
   "anima.ui.combat.weapons.block.title": "Parada",
-  "anima.ui.combat.weapons.breaking.title": "Rot.",
+  "anima.ui.combat.weapons.breaking.title": "Rotura",
   "anima.ui.combat.weapons.cadence.title": "Cadencia",
   "anima.ui.combat.weapons.critic.primary.title": "Crítico 1",
   "anima.ui.combat.weapons.critic.secondary.title": "Crítico 2",
-  "anima.ui.combat.weapons.damage.title": "Daño",
-  "anima.ui.combat.weapons.fueRequired.title": "FUE req.",
-  "anima.ui.combat.weapons.header.name.title": "Nombre",
-  "anima.ui.combat.weapons.initiative.title": "Turno",
-  "anima.ui.combat.weapons.initiativeBase.title": "Turno base",
-  "anima.ui.combat.weapons.integrity.title": "Ent.",
+  "anima.ui.combat.weapons.damage.base.title": "Daño base",
+  "anima.ui.combat.weapons.damage.final.title": "Daño",
+  "anima.ui.combat.weapons.strRequired.oneHand.title": "FUE req.",
+  "anima.ui.combat.weapons.strRequired.twoHands.title": "2M FUE req.",
+  "anima.ui.combat.weapons.initiative.final.title": "Turno",
+  "anima.ui.combat.weapons.initiative.base.title": "Turno base",
+  "anima.ui.combat.weapons.integrity.title": "Entereza",
   "anima.ui.combat.weapons.isRanged.title": "¿A distancia?",
   "anima.ui.combat.weapons.knowledgeType.title": "Tipo",
   "anima.ui.combat.weapons.oneOrTwoHanded.title": "1 o 2 manos",
   "anima.ui.combat.weapons.presence.title": "Presencia",
   "anima.ui.combat.weapons.quality.title": "Calidad",
-  "anima.ui.combat.weapons.range.title": "Rango (m)",
+  "anima.ui.combat.weapons.range.base.title": "Rango base (m)",
+  "anima.ui.combat.weapons.range.final.title": "Rango (m)",
   "anima.ui.combat.weapons.size.title": "Tamaño",
   "anima.ui.combat.weapons.special.title": "Especial",
   "anima.ui.combat.weapons.title": "Armas",
