--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -30,14 +30,21 @@
   "anima.ui.combat.armors.at.thrust.title": "THR",
   "anima.ui.combat.armors.equipped.title": "¿Equipped?",
   "anima.ui.combat.armors.header.name.title": "Nombre",
-  "anima.ui.combat.armors.integrity.title": "Int.",
+  "anima.ui.combat.armors.integrity.title": "Integrity",
   "anima.ui.combat.armors.localization.head.title": "Head",
+  "anima.ui.combat.weapon.manageabilityType.title": "Manageability type",
+  "anima.ui.combat.weapon.manageabilityType.oneHand.title": "1 hand",
+  "anima.ui.combat.weapon.manageabilityType.twoHand.title": "2 hands",
+  "anima.ui.combat.weapon.manageabilityType.oneOrTwoHand.title": "1 or 2 hands",
+  "anima.ui.combat.weapon.shotType.title": "Shot type",
+  "anima.ui.combat.weapon.shotType.shot.title": "Shot",
+  "anima.ui.combat.weapon.shotType.throw.title": "Throw",
   "anima.ui.combat.armors.localization.breastplate.title": "Breastplate",
   "anima.ui.combat.armors.localization.complete.title": "Complete",
   "anima.ui.combat.armors.localization.nightdress.title": "Nightdress",
   "anima.ui.combat.armors.localization.title": "Localization",
   "anima.ui.combat.armors.movementRestriction.base.title": "Movem. Restrict. Base",
-  "anima.ui.combat.armors.movementRestriction.final.title": "Movem. Restric. Final",
+  "anima.ui.combat.armors.movementRestriction.final.title": "Movem. Restrict. Final",
   "anima.ui.combat.armors.name.title": "Name",
   "anima.ui.combat.armors.naturalPenalty.title": "Natural pen.",
   "anima.ui.combat.armors.presence.title": "Presence",
@@ -59,22 +66,24 @@
   "anima.ui.combat.weapons.attack.title": "Attack",
   "anima.ui.combat.weapons.block.roll.message": "block with ",
   "anima.ui.combat.weapons.block.title": "Block",
-  "anima.ui.combat.weapons.breaking.title": "Bre.",
+  "anima.ui.combat.weapons.breaking.title": "Breaking",
   "anima.ui.combat.weapons.cadence.title": "Cadence",
   "anima.ui.combat.weapons.critic.primary.title": "Critic 1",
   "anima.ui.combat.weapons.critic.secondary.title": "Critic 2",
-  "anima.ui.combat.weapons.damage.title": "Damage",
-  "anima.ui.combat.weapons.fueRequired.title": "STR req.",
-  "anima.ui.combat.weapons.header.name.title": "Name",
-  "anima.ui.combat.weapons.initiative.title": "Initiative",
-  "anima.ui.combat.weapons.initiativeBase.title": "Initiative base",
-  "anima.ui.combat.weapons.integrity.title": "Int.",
+  "anima.ui.combat.weapons.damage.base.title": "Base damage",
+  "anima.ui.combat.weapons.damage.final.title": "Damage",
+  "anima.ui.combat.weapons.strRequired.oneHand.title": "STR req.",
+  "anima.ui.combat.weapons.strRequired.twoHands.title": "2H STR req.",
+  "anima.ui.combat.weapons.initiative.final.title": "Initiative",
+  "anima.ui.combat.weapons.initiative.base.title": "Initiative base",
+  "anima.ui.combat.weapons.integrity.title": "Integrity",
   "anima.ui.combat.weapons.isRanged.title": "¿Is ranged?",
   "anima.ui.combat.weapons.knowledgeType.title": "Type",
   "anima.ui.combat.weapons.oneOrTwoHanded.title": "1 o 2 handed",
   "anima.ui.combat.weapons.presence.title": "Presence",
   "anima.ui.combat.weapons.quality.title": "Quality",
-  "anima.ui.combat.weapons.range.title": "Range (m)",
+  "anima.ui.combat.weapons.range.base.title": "Base range (m)",
+  "anima.ui.combat.weapons.range.final.title": "Range (m)",
   "anima.ui.combat.weapons.size.title": "Size",
   "anima.ui.combat.weapons.special.title": "Special",
   "anima.ui.combat.weapons.title": "Weapons",
