changes: fix typo and remove repeat field on armor sheet and actor

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -50,7 +50,7 @@
   "anima.ui.combat.armors.presence.title": "Presence",
   "anima.ui.combat.armors.quality.title": "Quality",
   "anima.ui.combat.armors.title": "Armaduras",
-  "anima.ui.combat.armors.type.hard.title": "Hand",
+  "anima.ui.combat.armors.type.hard.title": "Hard",
   "anima.ui.combat.armors.type.natural.title": "Natural",
   "anima.ui.combat.armors.type.soft.title": "Soft",
   "anima.ui.combat.armors.type.title": "Type",
