changes: add ammo as external item

--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -21,6 +21,12 @@
   "anima.ui.combat.ammo.amount.title": "Cantidad",
   "anima.ui.combat.ammo.name.title": "Nombre",
   "anima.ui.combat.ammo.title": "Munición",
+  "anima.ui.combat.ammo.critic.title": "Crítico",
+  "anima.ui.combat.ammo.presence.title": "Presencia",
+  "anima.ui.combat.ammo.integrity.title": "Entereza",
+  "anima.ui.combat.ammo.breaking.title": "Rotura",
+  "anima.ui.combat.ammo.damage.title": "Daño",
+  "anima.ui.combat.ammo.special.title": "Especial",
   "anima.ui.combat.armors.at.cold.title": "FRI",
   "anima.ui.combat.armors.at.none.title": "-",
   "anima.ui.combat.armors.at.cut.title": "FIL",
