--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -21,6 +21,12 @@
   "anima.ui.combat.ammo.amount.title": "Amount",
   "anima.ui.combat.ammo.name.title": "Name",
   "anima.ui.combat.ammo.title": "Ammo",
+  "anima.ui.combat.ammo.critic.title": "Critic",
+  "anima.ui.combat.ammo.presence.title": "Presence",
+  "anima.ui.combat.ammo.integrity.title": "Integrity",
+  "anima.ui.combat.ammo.breaking.title": "Breaking",
+  "anima.ui.combat.ammo.damage.title": "Damage",
+  "anima.ui.combat.ammo.special.title": "Special",
   "anima.ui.combat.armors.at.cold.title": "COL",
   "anima.ui.combat.armors.at.none.title": "-",
   "anima.ui.combat.armors.at.cut.title": "CUT",
