feat: link ranged weapons with ammos

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -27,6 +27,7 @@
   "anima.ui.combat.ammo.breaking.title": "Breaking",
   "anima.ui.combat.ammo.damage.title": "Damage",
   "anima.ui.combat.ammo.special.title": "Special",
+  "anima.ui.combat.weapons.ammo.title": "Ammo",
   "anima.ui.combat.armors.at.cold.title": "COL",
   "anima.ui.combat.armors.at.none.title": "-",
   "anima.ui.combat.armors.at.cut.title": "CUT",
