feat: add weapon automatism

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -28,6 +28,8 @@
   "anima.ui.combat.ammo.damage.title": "Damage",
   "anima.ui.combat.ammo.special.title": "Special",
   "anima.ui.combat.weapons.ammo.title": "Ammo",
+  "anima.ui.combat.weapons.weaponFue.title": "Weapon STR",
+  "anima.ui.combat.weapons.hasOwnStr.title": "¿Own STR?",
   "anima.ui.combat.armors.at.cold.title": "COL",
   "anima.ui.combat.armors.at.none.title": "-",
   "anima.ui.combat.armors.at.cut.title": "CUT",
@@ -38,7 +40,8 @@
   "anima.ui.combat.armors.at.thrust.title": "THR",
   "anima.ui.combat.armors.equipped.title": "¿Equipped?",
   "anima.ui.combat.armors.header.name.title": "Nombre",
-  "anima.ui.combat.armors.integrity.title": "Integrity",
+  "anima.ui.combat.weapons.integrity.base.title": "Base integrity",
+  "anima.ui.combat.weapons.integrity.final.title": "Integrity",
   "anima.ui.combat.armors.localization.head.title": "Head",
   "anima.ui.combat.weapon.manageabilityType.title": "Manageability type",
   "anima.ui.combat.weapon.manageabilityType.oneHand.title": "1 hand",
@@ -74,7 +77,10 @@
   "anima.ui.combat.weapons.attack.title": "Attack",
   "anima.ui.combat.weapons.block.roll.message": "block with ",
   "anima.ui.combat.weapons.block.title": "Block",
-  "anima.ui.combat.weapons.breaking.title": "Breaking",
+  "anima.ui.combat.weapons.breaking.base.title": "Base breaking",
+  "anima.ui.combat.weapons.breaking.final.title": "Breaking",
+  "anima.ui.combat.weapons.reload.base.title": "Base reload",
+  "anima.ui.combat.weapons.reload.final.title": "Reload",
   "anima.ui.combat.weapons.cadence.title": "Cadence",
   "anima.ui.combat.weapons.critic.primary.title": "Critic 1",
   "anima.ui.combat.weapons.critic.secondary.title": "Critic 2",
@@ -88,7 +94,8 @@
   "anima.ui.combat.weapons.isRanged.title": "¿Is ranged?",
   "anima.ui.combat.weapons.knowledgeType.title": "Type",
   "anima.ui.combat.weapons.oneOrTwoHanded.title": "1 o 2 handed",
-  "anima.ui.combat.weapons.presence.title": "Presence",
+  "anima.ui.combat.weapons.presence.base.title": "Base presence",
+  "anima.ui.combat.weapons.presence.final.title": "Presence",
   "anima.ui.combat.weapons.quality.title": "Quality",
   "anima.ui.combat.weapons.range.base.title": "Base range (m)",
   "anima.ui.combat.weapons.range.final.title": "Range (m)",
