--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -37,6 +37,8 @@
   "anima.ui.combat.armors.at.thrust.title": "PEN",
   "anima.ui.combat.armors.equipped.title": "¿Equipada?",
   "anima.ui.combat.armors.header.name.title": "Nombre",
+  "anima.ui.combat.weapons.reload.base.title": "Recarga base",
+  "anima.ui.combat.weapons.reload.final.title": "Recarga",
   "anima.ui.combat.armors.integrity.title": "Entereza",
   "anima.ui.combat.armors.localization.head.title": "Cabeza",
   "anima.ui.combat.weapon.manageabilityType.title": "Manejabilidad",
@@ -54,7 +56,8 @@
   "anima.ui.combat.armors.movementRestriction.final.title": "Restr. Movim. Final",
   "anima.ui.combat.armors.name.title": "Nombre",
   "anima.ui.combat.armors.naturalPenalty.title": "Pen. natural",
-  "anima.ui.combat.armors.presence.title": "Presencia",
+  "anima.ui.combat.weapons.presence.base.title": "Presencia base",
+  "anima.ui.combat.weapons.presence.final.title": "Presencia",
   "anima.ui.combat.armors.quality.title": "Calidad",
   "anima.ui.combat.armors.title": "Armaduras",
   "anima.ui.combat.armors.type.hard.title": "Dura",
@@ -71,10 +74,13 @@
   "anima.ui.combat.finalArmor.title": "Armadura final",
   "anima.ui.combat.weapons.attack.roll.message": "ataque con ",
   "anima.ui.combat.weapons.ammo.title": "Munición",
+  "anima.ui.combat.weapons.weaponFue.title": "FUE Arma",
+  "anima.ui.combat.weapons.hasOwnStr.title": "¿FUE propio?",
   "anima.ui.combat.weapons.attack.title": "Ataque",
   "anima.ui.combat.weapons.block.roll.message": "parada con ",
   "anima.ui.combat.weapons.block.title": "Parada",
-  "anima.ui.combat.weapons.breaking.title": "Rotura",
+  "anima.ui.combat.weapons.breaking.base.title": "Rotura base",
+  "anima.ui.combat.weapons.breaking.final.title": "Rotura",
   "anima.ui.combat.weapons.cadence.title": "Cadencia",
   "anima.ui.combat.weapons.critic.primary.title": "Crítico 1",
   "anima.ui.combat.weapons.critic.secondary.title": "Crítico 2",
@@ -84,7 +90,8 @@
   "anima.ui.combat.weapons.strRequired.twoHands.title": "2M FUE req.",
   "anima.ui.combat.weapons.initiative.final.title": "Turno",
   "anima.ui.combat.weapons.initiative.base.title": "Turno base",
-  "anima.ui.combat.weapons.integrity.title": "Entereza",
+  "anima.ui.combat.weapons.integrity.base.title": "Entereza base",
+  "anima.ui.combat.weapons.integrity.final.title": "Entereza",
   "anima.ui.combat.weapons.isRanged.title": "¿A distancia?",
   "anima.ui.combat.weapons.knowledgeType.title": "Tipo",
   "anima.ui.combat.weapons.oneOrTwoHanded.title": "1 o 2 manos",
