feat: add ammo automatism

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -22,11 +22,16 @@
   "anima.ui.combat.ammo.name.title": "Name",
   "anima.ui.combat.ammo.title": "Ammo",
   "anima.ui.combat.ammo.critic.title": "Critic",
+  "anima.ui.combat.ammo.presence.base.title": "Base presence",
+  "anima.ui.combat.ammo.integrity.base.title": "Base integrity",
+  "anima.ui.combat.ammo.breaking.base.title": "Base breaking",
   "anima.ui.combat.ammo.presence.title": "Presence",
   "anima.ui.combat.ammo.integrity.title": "Integrity",
   "anima.ui.combat.ammo.breaking.title": "Breaking",
+  "anima.ui.combat.ammo.damage.base.title": "Base damage",
   "anima.ui.combat.ammo.damage.title": "Damage",
   "anima.ui.combat.ammo.special.title": "Special",
+  "anima.ui.combat.ammo.quality.title": "Quality",
   "anima.ui.combat.weapons.ammo.title": "Ammo",
   "anima.ui.combat.weapons.weaponFue.title": "Weapon STR",
   "anima.ui.combat.weapons.hasOwnStr.title": "¿Own STR?",
