--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -22,9 +22,14 @@
   "anima.ui.combat.ammo.name.title": "Nombre",
   "anima.ui.combat.ammo.title": "Munición",
   "anima.ui.combat.ammo.critic.title": "Crítico",
+  "anima.ui.combat.ammo.presence.base.title": "Presencia base",
+  "anima.ui.combat.ammo.integrity.base.title": "Entereza base",
+  "anima.ui.combat.ammo.breaking.base.title": "Rotura base",
   "anima.ui.combat.ammo.presence.title": "Presencia",
   "anima.ui.combat.ammo.integrity.title": "Entereza",
   "anima.ui.combat.ammo.breaking.title": "Rotura",
+  "anima.ui.combat.ammo.quality.title": "Calidad",
+  "anima.ui.combat.ammo.damage.base.title": "Daño base",
   "anima.ui.combat.ammo.damage.title": "Daño",
   "anima.ui.combat.ammo.special.title": "Especial",
   "anima.ui.combat.armors.at.cold.title": "FRI",
